crates/tm-exec/tests/snapshots/golden@order_limit.snap
---
source: crates/tm-exec/tests/golden_sql.rs
expression: text
---
SELECT t0.o AS c0 FROM triple AS t0 WHERE t0.p = ?1 AND t0.t_ret IS NULL ORDER BY CASE WHEN (t0.o & 15) IN (0, 10, 11, 12, 13, 14) THEN (SELECT tm_sortkey(t0.o, d0.lex, d0.num, d0.lang) FROM term AS d0 WHERE d0.id = (t0.o >> 4)) ELSE tm_sortkey(t0.o, NULL, NULL, NULL) END DESC NULLS LAST, t0.o LIMIT ?2 OFFSET ?3
-- params: 3
